--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Distance Learning Education Center</h1>
-                                             <h3>Our online courses are designed to fit in your industry supporting all-round with latest technologies.</h3>
+                                             <h1>AS A SECOND LANGUAGE</h1>
+                                             <h3>language learning for the modern student</h3>
+                                             <h3>learn english in a way that is freeing, feasible and fun</h3>
+                                                  
                                              <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
                                         </div>
                                    </div>
