footer and color changes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
                          <li><a href="#blog" class="smoothScroll">Blog</a></li>
                          <li><a href="#courses" class="smoothScroll">Courses</a></li>
                          <li><a href="#testimonial" class="smoothScroll">Reviews</a></li>
-                         <li><a href="#contact" class="smoothScroll">Contact</a></li>
                     </ul>
                </div>
 
@@ -164,7 +163,7 @@
                                    <input type="text" name="full name" class="form-control" placeholder="Full name" required="">
 
                                    <input type="email" name="email" class="form-control" placeholder="Your email address" required="">
-
+                                   <span><sup>*</sup> Please note - we do not spam your email.</span>
                                    <button class="submit-btn form-control" id="form-submit">Get started</button>
                               </form>
                          </div>
@@ -570,22 +569,25 @@
                     <div class="col-md-4 col-sm-6">
                          <div class="footer-info">
                               <div class="section-title">
-                                   <h2>Headquarter</h2>
+                                   <h2>Contact</h2>
                               </div>
-                              <address>
-                                   <p>1800 dapibus a tortor pretium,<br> Integer nisl dui, ABC 12000</p>
-                              </address>
 
                               <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-instagram"></a></li>
+                                   <li><a href="mailto:support@asasecondlanguage.com" class="fa fa-envelope"></a></li>
+                                   <li><a href="https://www.facebook.com/asasecondlanguage/" class="fa fa-facebook-square" attr="facebook icon"></a></li>
+                                   <li><a href="https://www.instagram.com/asasecondlanguage/" class="fa fa-instagram"></a></li>
+                                   <li><a href="https://www.instagram.com/asasecondlanguage/" class="fa fa-youtube-play"></a></li>
                               </ul>
 
-                              <div class="copyright-text"> 
-                                   <p>Copyright &copy; 2019 Company Name</p>
+                              <div class="copyright-text">
+                                   <br>
+                                   <br>
+                                   <br>
+                                   <br>
+                                   <br>
+                                   <br>
+                                   <p>Copyright &copy; 2019 As a Second Language</p>
                                    
-                                   <p>Design: TemplateMo</p>
                               </div>
                          </div>
                     </div>
@@ -593,22 +595,14 @@
                     <div class="col-md-4 col-sm-6">
                          <div class="footer-info">
                               <div class="section-title">
-                                   <h2>Contact Info</h2>
-                              </div>
-                              <address>
-                                   <p>+65 2244 1100, +66 1800 1100</p>
-                                   <p><a href="mailto:youremail.co">hello@youremail.co</a></p>
-                              </address>
-
-                              <div class="footer_menu">
                                    <h2>Quick Links</h2>
-                                   <ul>
-                                        <li><a href="#">Career</a></li>
-                                        <li><a href="#">Investor</a></li>
-                                        <li><a href="#">Terms & Conditions</a></li>
-                                        <li><a href="#">Refund Policy</a></li>
-                                   </ul>
                               </div>
+                              <br>
+                              <p>
+                                   <a href="#">Blog</a> <br>
+                                   <a href="#">Terms & Conditions</a> <br>
+                                   <a href="#">Privacy Policy</a>
+                              </p>
                          </div>
                     </div>
 
@@ -621,7 +615,7 @@
                                    <div class="form-group">
                                         <form action="#" method="get">
                                              <input type="email" class="form-control" placeholder="Enter your email" name="email" id="email" required="">
-                                             <input type="submit" class="form-control" name="submit" id="form-submit" value="Send me">
+                                             <input type="submit" class="form-control" name="submit" id="form-submit" value="Join">
                                         </form>
                                         <span><sup>*</sup> Please note - we do not spam your email.</span>
                                    </div>
