--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                               <figure>
                                    <span><i class="fa fa-certificate"></i></span>
                                    <figcaption>
-                                        <h3>International Certifications</h3>
+                                        <h3>Order of Operations</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ipsa voluptatibus.</p>
                                    </figcaption>
                               </figure>
@@ -157,7 +157,7 @@
                               <figure>
                                    <span><i class="fa fa-bar-chart-o"></i></span>
                                    <figcaption>
-                                        <h3>Free for 3 months</h3>
+                                        <h3>Tips and Tricks</h3>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ipsa voluptatibus.</p>
                                    </figcaption>
                               </figure>
@@ -181,89 +181,6 @@
      </section>
 
 
-     <!-- TEAM -->
-     <section id="team">
-          <div class="container">
-               <div class="row">
-
-                    <div class="col-md-12 col-sm-12">
-                         <div class="section-title">
-                              <h2>Teachers <small>Meet Professional Trainers</small></h2>
-                         </div>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6">
-                         <div class="team-thumb">
-                              <div class="team-image">
-                                   <img src="images/author-image1.jpg" class="img-responsive" alt="">
-                              </div>
-                              <div class="team-info">
-                                   <h3>Mark Wilson</h3>
-                                   <span>I love Teaching</span>
-                              </div>
-                              <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-instagram"></a></li>
-                              </ul>
-                         </div>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6">
-                         <div class="team-thumb">
-                              <div class="team-image">
-                                   <img src="images/author-image2.jpg" class="img-responsive" alt="">
-                              </div>
-                              <div class="team-info">
-                                   <h3>Catherine</h3>
-                                   <span>Education is the key!</span>
-                              </div>
-                              <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-google"></a></li>
-                                   <li><a href="#" class="fa fa-instagram"></a></li>
-                              </ul>
-                         </div>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6">
-                         <div class="team-thumb">
-                              <div class="team-image">
-                                   <img src="images/author-image3.jpg" class="img-responsive" alt="">
-                              </div>
-                              <div class="team-info">
-                                   <h3>Jessie Ca</h3>
-                                   <span>I like Online Courses</span>
-                              </div>
-                              <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-envelope-o"></a></li>
-                                   <li><a href="#" class="fa fa-linkedin"></a></li>
-                              </ul>
-                         </div>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6">
-                         <div class="team-thumb">
-                              <div class="team-image">
-                                   <img src="images/author-image4.jpg" class="img-responsive" alt="">
-                              </div>
-                              <div class="team-info">
-                                   <h3>Andrew Berti</h3>
-                                   <span>Learning is fun</span>
-                              </div>
-                              <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-google"></a></li>
-                                   <li><a href="#" class="fa fa-behance"></a></li>
-                              </ul>
-                         </div>
-                    </div>
-
-               </div>
-          </div>
-     </section>
-
-
      <!-- Courses -->
      <section id="courses">
           <div class="container">
@@ -271,7 +188,7 @@
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
-                              <h2>Popular Courses <small>Upgrade your skills with newest courses</small></h2>
+                              <h2>Resources <small>Check out our free learning materials</small></h2>
                          </div>
 
                          <div class="owl-carousel owl-theme owl-courses">
@@ -448,16 +365,22 @@
                          </div>
 
                          <div class="owl-carousel owl-theme owl-client">
+
                               <div class="col-md-4 col-sm-4">
                                    <div class="item">
                                         <div class="tst-image">
-                                             <img src="images/tst-image1.jpg" class="img-responsive" alt="">
+                                             <img src="images/Maria_C.JPG" class="img-responsive" alt="">
                                         </div>
                                         <div class="tst-author">
-                                             <h4>Jackson</h4>
-                                             <span>Shopify Developer</span>
+                                             <h4>Maria C.</h4>
+                                             <span>Student</span>
                                         </div>
-                                        <p>You really do help young creative minds to get quality education and professional job search assistance. I’d recommend it to everyone!</p>
+                                        <p>"First of all, I’d like to say that Malory is such an amazing person, woman and teacher. She inspired me to be
+                                             better, follow my dreams, not to give up and to always see the positive side of everything. I’m so grateful for
+                                             that, and for me it is a pleasure to say that she was my teacher. She taught me not only English and the culture,
+                                             but also many different things for my life and my future. She is an incredible teacher. She always thinks about her
+                                             students and teaches them things that are useful for their life. She always helped us when we needed it and I can
+                                             say that we all feel more confident talking in English now because of her help and her as our teacher."</p>
                                         <div class="tst-rating">
                                              <i class="fa fa-star"></i>
                                              <i class="fa fa-star"></i>
@@ -471,14 +394,20 @@
                               <div class="col-md-4 col-sm-4">
                                    <div class="item">
                                         <div class="tst-image">
-                                             <img src="images/tst-image2.jpg" class="img-responsive" alt="">
+                                             <img src="images/Jennifer_C.JPG" class="img-responsive" alt="">
                                         </div>
                                         <div class="tst-author">
-                                             <h4>Camila</h4>
-                                             <span>Marketing Manager</span>
+                                             <h4>Jennifer C.</h4>
+                                             <span>Physical Therapist</span>
                                         </div>
-                                        <p>Trying something new is exciting! Thanks for the amazing law course and the great teacher who was able to make it interesting.</p>
+                                        <p>"When I think of a good teacher, I could say with certainty that, that person needs to be passionate and love every single aspect about teaching.
+                                                  I have a picture in my mind of someone who taught me more than English, of course she did an excellent job of teaching that too, but she also impacted my thoughts and made me feel motivated in regard to my goals, learning everyday with discipline and about being focused.
+                                                  She also demonstrated something unique to me- compassion. Which is an important quality. She worked hard to understand each student’s individual situation. She was more than just an English teacher and I’m so grateful for the opportunity I had to be her student.
+                                                  The teacher I am picturing is Malory."
+                                                  </p>
                                         <div class="tst-rating">
+                                             <i class="fa fa-star"></i>
+                                             <i class="fa fa-star"></i>
                                              <i class="fa fa-star"></i>
                                              <i class="fa fa-star"></i>
                                              <i class="fa fa-star"></i>
@@ -492,40 +421,23 @@
                                              <img src="images/tst-image3.jpg" class="img-responsive" alt="">
                                         </div>
                                         <div class="tst-author">
-                                             <h4>Barbie</h4>
-                                             <span>Art Director</span>
+                                             <h4>Diana A.</h4>
+                                             <span>Environmentalist</span>
                                         </div>
-                                        <p>Donec erat libero, blandit vitae arcu eu, lacinia placerat justo. Sed sollicitudin quis felis vitae hendrerit.</p>
+                                        <p>"Malory as a teacher is awesome, she has the patience to teach and repeat every lesson. Everyday she is prepared for
+                                             her classes, so every single moment we are learning. I improved my English with her as my teacher in a way where
+                                             she not only corrected me, but also made me feel like I can get better.”</p>
                                         <div class="tst-rating">
                                              <i class="fa fa-star"></i>
                                              <i class="fa fa-star"></i>
                                              <i class="fa fa-star"></i>
                                              <i class="fa fa-star"></i>
+                                             <i class="fa fa-star"></i>
+
                                         </div>
                                    </div>
                               </div>
-
-                              <div class="col-md-4 col-sm-4">
-                                   <div class="item">
-                                        <div class="tst-image">
-                                             <img src="images/tst-image4.jpg" class="img-responsive" alt="">
-                                        </div>
-                                        <div class="tst-author">
-                                             <h4>Andrio</h4>
-                                             <span>Web Developer</span>
-                                        </div>
-                                        <p>Nam eget mi eu ante faucibus viverra nec sed magna. Vivamus viverra sapien ex, elementum varius ex sagittis vel.</p>
-                                        <div class="tst-rating">
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
-                                        </div>
-                                   </div>
-                              </div>
-
                          </div>
-
                </div>
           </div>
      </section> 
